package com.company;

public class Player {

    public static void main(String[] args) {
        Goblin g= new TheGoblin();
        g.TiraFreccia();

	// write your code here
    }
}
