package com.company;

public interface Postura {

    void spara();
    void impreca();
    Postura up();
    Postura down();
}
